Add trivia form component and Angular Material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,5 +13,10 @@
     </ng-template>
   </section>
 
+  <!-- Trivia Form -->
+  <section>
+    <app-trivia-form></app-trivia-form>
+  </section>
+
   <router-outlet></router-outlet>
 </div>
