--- a/src/app/components/trivia-form/trivia-form.component.html
+++ b/src/app/components/trivia-form/trivia-form.component.html
@@ -1,1 +1,19 @@
-<p>trivia-form works!</p>
+<form [formGroup]="triviaForm">
+  <!-- Select category -->
+  <div *ngIf="categories$ | async as categories; else noCategories">
+    <mat-form-field appearance="fill">
+      <mat-label>Select a category</mat-label>
+      <mat-select formControlName="category">
+        <mat-option *ngFor="let category of categories" [value]="category.id">
+          {{ category.name }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <ng-template #noCategories>
+    <p>No categories returned. Please refresh or try again later.</p>
+  </ng-template>
+
+  <!-- Trivia questions -->
+  <div></div>
+</form>
