--- a/src/app/components/trivia-form/trivia-form.component.html
+++ b/src/app/components/trivia-form/trivia-form.component.html
@@ -15,13 +15,14 @@
   </ng-template>
 
   <!-- Trivia questions -->
-  <ul class="p-4" *ngIf="hasCategory">
+  <ul class="p-4" *ngIf="hasCategory; else noCategorySelected">
     <li
       class="py-2"
       *ngFor="let triviaQuestion of triviaQuestions; let i = index"
     >
       <p>{{ i + 1 }}: {{ triviaQuestion.question }}</p>
       <div class="flex flex-col">
+        <!-- TODO: Swap checkboxes for radio buttons so only one answer can be selected -->
         <mat-checkbox
           class="px-4"
           *ngFor="let answer of triviaQuestion.incorrect_answers"
@@ -31,4 +32,7 @@
       </div>
     </li>
   </ul>
+  <ng-template #noCategorySelected>
+    <p>Please select a category to play Trivia Geek.</p>
+  </ng-template>
 </form>
