--- a/src/app/components/trivia-form/trivia-form.component.html
+++ b/src/app/components/trivia-form/trivia-form.component.html
@@ -21,15 +21,16 @@
       *ngFor="let triviaQuestion of triviaQuestions; let i = index"
     >
       <p>{{ i + 1 }}: {{ triviaQuestion.question }}</p>
-      <div class="flex flex-col">
-        <!-- TODO: Swap checkboxes for radio buttons so only one answer can be selected -->
-        <mat-checkbox
+      <mat-radio-group class="flex flex-col">
+        <mat-radio-button
           class="px-2"
+          aria-label="Select an answer"
           *ngFor="let answer of triviaQuestion.incorrect_answers"
+          [value]="answer"
         >
           {{ answer }}
-        </mat-checkbox>
-      </div>
+        </mat-radio-button>
+      </mat-radio-group>
     </li>
   </ul>
   <ng-template #noCategorySelected>
