Center text in incorrect answer

--- a/src/app/components/answer-results/answer-results.component.html
+++ b/src/app/components/answer-results/answer-results.component.html
@@ -9,7 +9,7 @@
       </p>
     </div>
     <ng-template #wrongAnswer>
-      <p class="text-lg text-rose-500">
+      <p class="flex justify-center text-lg text-rose-500">
         You chose incorrectly. The correct answer is "{{ data.correctAnswer }}"
       </p>
     </ng-template>
